--- a/style.css
+++ b/style.css
@@ -138,16 +138,24 @@ animation: anim 10s infinite linear;
 }
 
 #tvEnVivo,
-#homep,
-#sPelis,
-#avisop,
-#avisol{
-width: 25px;
-}
+    #homep,
+    #sPelis,
+    #avisop,
+    #avisol,
+    #compartir,
+    #telegram{
+      width: 25px;
+      height: 25px;
+    }
 
-a{
-text-decoration: none;
-}
+    a{
+      text-decoration: none;
+    }
+
+    #comp{
+      cursor: pointer;
+    }
+
 
 html {
   box-sizing: border-box;
