--- a/style.css
+++ b/style.css
@@ -1127,3 +1127,29 @@ select,
   background-color: #000000a1;
   
 }
+
+.searchInput{
+  padding: 8px 12px;
+  margin: 10px 0;
+  width: 100%;
+  max-width: 300px;
+  border: 1px;
+  border-radius: 4px;
+  font-size: 14px;
+  
+}
+
+input{
+  background-color: #3636368c;
+  width: 100%;
+  max-width: 100%;
+  padding: 10px;
+  padding-right: 50px;
+  border-radius: 50px;
+  border: 0;
+  outline: none;
+  font-size: 0.8rem;
+  color: #c2bfbf;
+  display: none;
+  
+}
