--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ animation: anim 10s infinite linear;
     max-height: 0;
     overflow: hidden;
     background: rgba(255, 255, 255, 0);
-    transition: max-height 0.3s ease-in-out;
+    transition: 0.5s;
     padding: 0 20px;
     box-sizing: border-box;
     
