--- a/style.css
+++ b/style.css
@@ -161,7 +161,6 @@ animation: anim 10s infinite linear;
       text-transform: uppercase;
       color: #ffc400;
       background-color: #000000;
-
     }
 
     #r {
@@ -171,17 +170,14 @@ animation: anim 10s infinite linear;
       
     }
 
-    
-
     #nav-widget-1{
       background-color: #00000000;
       height: auto;
     }
 
     .d-inline-flex{
-      margin: -3px 0;
+      margin: 15px 0;
       width: 250px;
-
     }
 
     #boton {
@@ -189,7 +185,7 @@ animation: anim 10s infinite linear;
       height: 35px;
       background-color: #000000;
       border-radius: 100%;
-      border: 1px solid #ffc400
+      border: 1px solid #ffc400;
 
     }
 
@@ -201,23 +197,14 @@ animation: anim 10s infinite linear;
     .mMenu li ul {
       display: none;
       position: absolute;
-      max-width: 140px;
+      max-width: 300px;
     }
 
     .close-button{
       left: 190%;
-      margin-top: -50px;
+      margin-top: -19px;
       
     }
-
-    .mMenu > li {
-    float: left;
-    position: relative; 
-    cursor: pointer; 
-    cursor: pointer;
-    display: relative;
-    
-}
 
     .mMenu > li {
     float: left;
@@ -231,7 +218,7 @@ animation: anim 10s infinite linear;
 .mMenu li ul {
     display: none;
     position: absolute;
-    max-width: 140px;
+    max-width: 190px;
 }
 
 /* Mostrar el submenú cuando se hace clic */
@@ -248,9 +235,10 @@ animation: anim 10s infinite linear;
     max-height: 0;
     overflow: hidden;
     background: rgba(255, 255, 255, 0);
-    transition: 0.5s;
+    transition: 0.6s;
     padding: 0 20px;
     box-sizing: border-box;
+    height: 200px;
     
 }
 
@@ -1167,3 +1155,12 @@ select,
   background-color: #000000a1;
   
 }
+
+
+
+
+
+
+
+
+
